# Rach

./: .gitignore  Cargo.toml  README.md  build.rs  example.lang  grammar.ebnf
docs/: INSTALL_SNIPPETS.md  REFERENCE.md  WEBSITE_BRIEF.md
examples/: hello.rach  install_zsh.rach  login.rach  native.rach  new_features.rach  short.rach  webdriver_search.rach
installers/: README.md  install.bat  install.c  install.cpp  install.py  install.sh
native/: util.c  util.cpp
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs
src/stdlib/: ai.rs  ascii.rs  bash.rs  collections.rs  drivers.rs  http.rs  io.rs  json.rs  logging.rs  math.rs  mod.rs  native.rs  os.rs  system.rs  time.rs  web.rs  webdriver.rs
vscode-rach/: README.md  language-configuration.json  package.json
vscode-rach/syntaxes/: rach.tmLanguage.json
